# gsequencer

./: #%2Amerge%2A#23333bkc#  #%2Amerge%2A#23428fkc#  #%2Amerge%2A#23522ikc#  #%2Amerge%2A#246653lc#  #%2Amerge%2A#247597lc#  #ChangeLog#  #Makefile.am#  #log#  #sequence_utf16_to_utf8_range.c#  .#ChangeLog  .#Makefile.am  .#log  .#sequence_utf16_to_utf8_range.c  .clang-format  .gitignore  .gitignore.orig  .gitignore~  .pre-commit-config.yaml  AUTHORS  COPYING.stk-4.3  ChangeLog  ChangeLog.orig  Documentation  Doxyfile  Doxyfile.in  INSTALL  INSTALL.orig  LICENSE  Makefile  Makefile.am  Makefile.am.orig  Makefile.am~  Makefile.debian  Makefile.in  Makefile.in.orig  Makefile.midi2ags  Makefile.midi2ags~  NEWS  README  README.md  (+599 more)
ags/: Makefile  Makefile.am  README  ags.h  ags_api_config.h.in  ags_config.h.in  config.h  config.h.in  gsequencer.gresource.xml  gsequencer_audio_unit_test.c  gsequencer_macos_install_main.c  gsequencer_main.c  gsequencer_main.h  i18n.h  libags-audio.h  libags-gui.h  libags-vst.h  libags.h  lv2plugin2xml_main.c  lv2plugin2xml_main.c~  main.c~  meson.build  midi2xml_main.c  stamp-h1
ags/.deps/: gsequencer-gsequencer_main.Po  gsequencer_static-gsequencer_main.Po  midi2xml-midi2xml_main.Po
ags/GSequencer/: ags_animation_window.c  ags_application_menu.ui  ags_audio_preferences.c  ags_audio_preferences_callbacks.c  ags_audio_preferences_callbacks.h  ags_automation_editor.c  ags_automation_editor.h  ags_automation_editor_callbacks.c  ags_automation_editor_callbacks.h  ags_automation_window.c  ags_automation_window.h  ags_automation_window_callbacks.c  ags_automation_window_callbacks.h  ags_bulk_member.c  ags_bulk_member_callbacks.c  ags_bulk_member_callbacks.h  ags_composite_editor.c  ags_composite_editor.h  ags_composite_editor_callbacks.c  ags_composite_editor_callbacks.h  ags_connection_editor.c  ags_connection_editor.h  ags_connection_editor_callbacks.c  ags_connection_editor_callbacks.h  ags_context_menu.c  ags_dssi_browser.c  ags_dssi_browser.h  ags_dssi_browser_callbacks.c  ags_dssi_browser_callbacks.h  ags_effect_bridge.c  ags_effect_bridge_callbacks.c  ags_effect_bridge_callbacks.h  ags_effect_bulk.c  ags_effect_bulk_callbacks.c  ags_effect_bulk_callbacks.h  ags_effect_line.c  ags_effect_line_callbacks.c  ags_effect_line_callbacks.h  ags_effect_pad.c  ags_effect_pad_callbacks.c  (+173 more)
ags/X/: #ags_effect_line.h#  .#ags_effect_line.h  Makefile  Makefile.am  ags_animation_window.c  ags_animation_window.h  ags_audio_connection_collection_editor.c  ags_audio_connection_collection_editor.h  ags_audio_connection_collection_editor_callbacks.c  ags_audio_connection_collection_editor_callbacks.h  ags_audio_preferences.c  ags_audio_preferences.h  ags_audio_preferences_callbacks.c  ags_audio_preferences_callbacks.h  ags_automation_editor.c  ags_automation_editor.h  ags_automation_editor_callbacks.c  ags_automation_editor_callbacks.h  ags_automation_window.c  ags_automation_window.c~  ags_automation_window.h  ags_automation_window.h~  ags_automation_window_callbacks.c  ags_automation_window_callbacks.h  ags_bulk_member.c  ags_bulk_member.h  ags_bulk_member_callbacks.c  ags_bulk_member_callbacks.h  ags_composite_edit.c  ags_composite_edit.h  ags_composite_edit_callbacks.c  ags_composite_edit_callbacks.h  ags_composite_editor.c  ags_composite_editor.h  ags_composite_editor_callbacks.c  ags_composite_editor_callbacks.h  ags_composite_view.c  ags_composite_view.h  ags_composite_view_callbacks.c  ags_composite_view_callbacks.h  (+240 more)
ags/app/: ags_animation_window.c  ags_animation_window.h  ags_app_action_util.c  ags_app_action_util.h  ags_audio_preferences.c  ags_audio_preferences.h  ags_audio_preferences_callbacks.c  ags_audio_preferences_callbacks.h  ags_automation_editor.c  ags_automation_editor.h  ags_automation_editor_callbacks.c  ags_automation_editor_callbacks.h  ags_automation_window.c  ags_automation_window.h  ags_automation_window_callbacks.c  ags_automation_window_callbacks.h  ags_bulk_member.c  ags_bulk_member.h  ags_bulk_member_callbacks.c  ags_bulk_member_callbacks.h  ags_composite_editor.c  ags_composite_editor.h  ags_composite_editor_callbacks.c  ags_composite_editor_callbacks.h  ags_connection_editor.c  ags_connection_editor.h  ags_connection_editor_bulk.c  ags_connection_editor_bulk.h  ags_connection_editor_bulk_callbacks.c  ags_connection_editor_bulk_callbacks.h  ags_connection_editor_callbacks.c  ags_connection_editor_callbacks.h  ags_connection_editor_collection.c  ags_connection_editor_collection.h  ags_connection_editor_collection_callbacks.c  ags_connection_editor_collection_callbacks.h  ags_connection_editor_dialog.c  ags_connection_editor_dialog.h  ags_connection_editor_dialog_callbacks.c  ags_connection_editor_dialog_callbacks.h  (+297 more)
ags/audio/: #%2Amerge%2A#25010imc#  #ags_recall.c#  .#ags_channel.c  .#ags_recycling_context.c  AUTHORS  Makefile  Makefile.am  ags_acceleration.c  ags_acceleration.h  ags_acceleration_cursor.h  ags_amplifier10_util.c  ags_amplifier10_util.h  ags_amplifier_util.c  ags_amplifier_util.h  ags_audio.c  ags_audio.h  ags_audio_application_context.c  ags_audio_application_context.h  ags_audio_application_context.h~  ags_audio_buffer_util.c  ags_audio_buffer_util.c~  ags_audio_buffer_util.h  ags_audio_buffer_util.h~  ags_audio_connection.c  ags_audio_connection.h  ags_audio_signal.c  ags_audio_signal.h  ags_automation.c  ags_automation.h  ags_automation_control_name_key_manager.c  ags_buffer.c  ags_buffer.h  (+221 more)
lib/: .gitignore  Makefile  Makefile.am  Makefile.in  ags_combo_box_text.c  ags_list.c  ags_list.h  ags_log.c  ags_log.h  ags_parameter.c  ags_parameter.h
m4/: .gitignore  Makefile  Makefile.am  Makefile.in  README  ags-def.m4  ags-docs-api.m4  ags-docs-books.m4  ags-listings.m4  ags-marshallers.m4  ags-potfiles.m4  ags-symbols.m4  gnulib-cache.m4  gnulib-comp.m4  libtool.m4
po/: ChangeLog  LINGUAS  Makefile  Makefile.am  Makefile.in  Makefile.in.in  Makevars  POTFILES  POTFILES.in  POTFILES.in.in  README  Rules-quot  de.gmo  de.po  fr.gmo  fr.po  gsequencer.pot  it.gmo  it.po  ka.gmo  ka.po  meson.build  pl.gmo  pl.po
(+11296 files in other folders)
